Rework the Bukkit rendering and resource pack hosting
Resend the whole wall to new viewers and every second, restore the blocks of
viewers that leave, and respawn invalid displays only in loaded chunks.
Replace the Netty injector with a handler that serves the pack, revalidate
cached upload URLs and support only Paper 26.2.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>